# Secure-And-Dependable-Systems-HW

./: README.md
1/1.1/: .gitignore  CMakeLists.txt  README
1/1.1/src/: CMakeLists.txt  rpn-stack.c  rpn-stack.h  rpn.h
1/1.1/tests/: CMakeLists.txt  check_stack.c
10/pnmhide/: CMakeLists.txt
10/pnmhide/src/: CMakeLists.txt  hide.c  hide.h  pnmhide.c
10/pnmhide/test/: check.sh
2/: sads2.tex  stats  stats.c
2/in/: in2
3/: hw3.tex
4/: hw4.tex
5/: 5.tex
5/p5-scrypt/src/: main.c  scrypt.c  scrypt.h
6/: 6.tex  puzz_sha256.py  rsa_break.py  test
7/: crack.py
8/: 8.tex
9/: 9.tex
